# spreet

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENCE  README.md  RELEASE.md  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  create-draft-release.yml  publish-release-to-crates-io.yml  release.yml
src/: cli.rs  error.rs  fs.rs  lib.rs  main.rs  sprite.rs
src/sprite/: mod.rs  serialize.rs
tests/: cli.rs  fs.rs  sprite.rs
tests/fixtures/output/: default@1x.json  default@2x.json  minify@1x.json  minify_unique@1x.json  pngs@2x.json  recursive@1x.json  sdf@2x.json  spacing2@1x.json  spacing@1x.json  spacing@2x.json  spacing_unique@1x.json  stretchable@2x.json  text@3x.json  unique@1x.json  unique@2x.json
tests/fixtures/stretchable/: README.md
