[package]
name = "spreet"
version = "0.9.0-dev"
edition = "2021"
rust-version = "1.61"
description = "Create a spritesheet from a set of SVG images"
readme = "README.md"
repository = "https://github.com/flother/spreet"
documentation = "https://docs.rs/spreet"
license = "MIT"
keywords = ["sprite", "svg", "cartography", "vector-tiles", "maplibre"]
categories = ["command-line-utilities", "encoding", "filesystem", "graphics"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:exitcode", "dep:rayon"]

[dependencies]
clap = { version = "4.3", features = ["derive"], optional = true }
crunch = "0.5.3"
exitcode = { version = "1.1", optional = true }
multimap = "0.9"
oxipng = { version = "8.0", features = ["parallel", "zopfli", "filetime"], default-features = false }
png = "0.17"
rayon = { version = "1.7", optional = true }
resvg = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0.13"
predicates = "3"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
