[package]
name = "spreet"
version = "0.10.0-dev"
edition = "2021"
rust-version = "1.63"
description = "Create a spritesheet from a set of SVG images"
readme = "README.md"
repository = "https://github.com/flother/spreet"
documentation = "https://docs.rs/spreet"
license = "MIT"
keywords = ["sprite", "svg", "cartography", "vector-tiles", "maplibre"]
categories = ["command-line-utilities", "encoding", "filesystem", "graphics"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:exitcode"]

[dependencies]
clap = { version = "4.4", features = ["derive"], optional = true }
crunch = "0.5.3"
exitcode = { version = "1.1", optional = true }
multimap = "0.9"
oxipng = { version = "9.0", features = ["parallel", "zopfli", "filetime"], default-features = false }
png = "0.17"
resvg = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0.13"
predicates = "3"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[[bin]]
name = "spreet"
required-features = ["cli"]
